Changed display sizes

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,16 +2,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Audiowide&effect=emboss');
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .displayText {
+        font-size: 3px;
+        letter-spacing: 1px;
+        line-height: 1px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .displayText {
+        font-size: 3px;
+        letter-spacing: 1px;
+        line-height: 1px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .displayText {
+        font-size: 3px;
+        letter-spacing: 1px;
+        line-height: 1px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .displayText {
+        font-size: 3px;
+        letter-spacing: 1px;
+        line-height: 1px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .displayText {
+        font-size: 8px;
+        letter-spacing: 1px;
+        line-height: 1px;
+    }
+}
+
 body {       
         color: white;
         background-image: url('../images/webback.png');       
         font-family: monospace;
 }
 
-p {
-    font-family: monospace;
-    font-size: 8px;
-    line-height: 1.0;
+p {  
+    font-family: 'Inconsolata', monospace;   
+}
+
+.displayText {
+    font-size: 3px;
+    letter-spacing: 1px;
+    line-height: 1px;
 }
 
 label {
@@ -32,28 +81,4 @@ h5 {
     padding: 10px 0px 10px;
 }
 
-@media screen and ( min-width:1px ) and ( max-width: 779px ) {
-    p { 
-        font-size: 0.7px;
-        line-height: 1.10px; 
-    }
-}
-@media screen and ( min-width:780px ) and ( max-width: 1099px ) {
-    p { 
-        font-size: 1.2px;
-        line-height: 1.3px; 
-    }
-}
-@media screen and ( min-width:1100px ) and ( max-width: 1254px ) {
-    p { 
-        font-size: 2px;
-        line-height: 1; 
-    }
-}
-@media screen and ( min-width: 1255px ) {
-    p { 
-        
-        font-size: 3px;
-        line-height: 1; 
-    }
-}
+
